# nfty-codex

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/initial-spec/: 2025-11-18-codex-ntfy-spec.md
docs/plans/: 2025-11-18-initial-build-scaffolding.md  2025-11-19-live-ntfy-delivery.md
docs/research/: 2025-11-18-initial-build-scaffolding-research.md  2025-11-19-live-ntfy-delivery-research.md
docs/setup/: env-vars.md  manual-test-checklist.md
docs/specs/: 2025-11-20-initial-build-scaffolding.md  2025-11-25-live-ntfy-delivery.md
scripts/: send_test_notification.py
src/notifier_server/: __init__.py  config.py  server.py
tests/: test_config.py  test_server.py
